fix: organism form => handle margin for form-action + style for left aligned btns

--- a/src/scss/_organismes.scss
+++ b/src/scss/_organismes.scss
@@ -475,13 +475,16 @@ $label-width-large: 220px;
         justify-content: center;
         flex-flow: row wrap;
         padding-top: pas(xl);
+        margin-bottom: pas(l);
 
         @include screen(from-large) {
             justify-content: flex-end;
         }
 
         &._alignegauche {
-            justify-content: flex-start;
+            @include screen(from-large) {
+                justify-content: flex-start;
+            }
         }
 
         &._petitemarge {
